# unitree_training

./: CMakeLists.txt  README.md  package.xml
sport_mode_samples/: CMakeLists.txt
sport_mode_samples/include/: read_sport_mode_state.hpp
sport_mode_samples/include/sport_mode_samples/: sport_mode_control.hpp
sport_mode_samples/src/: read_sport_mode_state.cpp  sport_mode_control.cpp
unitree_low_level/: CMakeLists.txt  package.xml
unitree_low_level/include/unitree_low_level/: read_low_level_state.hpp
unitree_low_level/src/: read_low_level_state.cpp
unitree_ros2_client/: CMakeLists.txt  package.xml
unitree_ros2_client/include/unitree_ros2_client/common/: ros2_sport_client.h
unitree_ros2_client/src/common/: motor_crc.cpp  ros2_sport_client.cpp
unitree_sport_mode/: CMakeLists.txt  package.xml
unitree_sport_mode/include/unitree_sport_mode/: read_sport_mode_state.hpp  sport_mode_control.hpp  trajectory_follow_sample.hpp
unitree_sport_mode/src/: read_sport_mode_state.cpp  sport_mode_control.cpp  trajectory_follow_sample.cpp
